Update main image and change button response image

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
     <div class="container">
         <div class="img_container">
-            <img id="mainImg" src="https://images.unsplash.com/photo-1550147760-44c9966d6bc7?q=80&w=500" alt="Dino">
+            <img id="mainImg" src="https://cdn-media.sforum.vn/storage/app/media/CTVSEO_Maihue/H%C3%ACnh%20n%E1%BB%81n%20kh%E1%BB%A7ng%20long/anh-khung-long-11.jpg" alt="Dino">
         </div>
         <h1 id="question">Em có muốn xem chú khủng long của anh không? ❤️</h1>
         <div class="buttons">
@@ -88,7 +88,7 @@
         yesBtn.addEventListener('click', () => {
             question.innerHTML = "Yeayy! Hẹn gặp tối nay nhé! 😘";
             // Đổi sang ảnh chúc mừng khi nhấn Đồng ý
-            mainImg.src = "https://images.unsplash.com/photo-1513151233558-d860c5398176?q=80&w=500";
+            mainImg.src = "https://cdn-media.sforum.vn/storage/app/media/anh-khung-long-29.jpg";
             document.querySelector('.buttons').style.display = 'none';
         });
     </script>
